Dear imgui integration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,26 +1,38 @@
 cmake_minimum_required(VERSION 3.10)
-project(heyPal)
+project(hey_Pal)
 
 # Set C++ standard
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-# Set the output directory for the executable
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
-
 # Include directories
-include_directories("${PROJECT_SOURCE_DIR}/source/headers")
+include_directories("${PROJECT_SOURCE_DIR}/headers")
 include_directories("${PROJECT_SOURCE_DIR}/extern/imgui")
+include_directories("${PROJECT_SOURCE_DIR}/extern/imgui/backends")
+
+# Find required packages
+find_package(glfw3 REQUIRED)
+
+# Set OpenGL_GL_PREFERENCE to GLVND
+set(OpenGL_GL_PREFERENCE GLVND)
+find_package(OpenGL REQUIRED)
 
 # Collect all source files
-file(GLOB SOURCES "${PROJECT_SOURCE_DIR}/source/src/*.cpp")
+file(GLOB SOURCES "${PROJECT_SOURCE_DIR}/src/*.cpp")
 
 # Collect Dear ImGui source files
-file(GLOB IMGUI_SOURCES "${PROJECT_SOURCE_DIR}/extern/imgui/*.cpp")
+file(GLOB IMGUI_SOURCES "${PROJECT_SOURCE_DIR}/extern/imgui/*.cpp"
+     "${PROJECT_SOURCE_DIR}/extern/imgui/backends/imgui_impl_glfw.cpp"
+     "${PROJECT_SOURCE_DIR}/extern/imgui/backends/imgui_impl_opengl3.cpp")
 
 # Create the executable
-add_executable(heyPal ${SOURCES} ${IMGUI_SOURCES})
+add_executable(hey_Pal ${SOURCES} ${IMGUI_SOURCES})
 
 # Specify the include directories for the target
-target_include_directories(heyPal PRIVATE "${PROJECT_SOURCE_DIR}/source/headers"
-                                          "${PROJECT_SOURCE_DIR}/extern/imgui")
+target_include_directories(
+  hey_Pal
+  PRIVATE "${PROJECT_SOURCE_DIR}/headers" "${PROJECT_SOURCE_DIR}/extern/imgui"
+          "${PROJECT_SOURCE_DIR}/extern/imgui/backends" "${GLFW_INCLUDE_DIRS}")
+
+# Link libraries to the executable
+target_link_libraries(hey_Pal PRIVATE glfw OpenGL::GL)
